--- a/helm/slurm-cluster/values.yaml
+++ b/helm/slurm-cluster/values.yaml
@@ -4,7 +4,7 @@ annotations: {}
 # Whether to gracefully stop the cluster. Setting it to false after cluster has been paused starts the cluster back
 pause: false
 # Slurm cluster type. Can be now gpu or cpu
-clusterType: gpu
+clusterType: cpu
 # partitionConfiguration define partition configuration of slurm worker nodes
 # https://slurm.schedmd.com/slurm.conf.html#SECTION_PARTITION-CONFIGURATION
 partitionConfiguration:
@@ -18,29 +18,59 @@ partitionConfiguration:
 # K8s node filters used in Slurm node specifications. Define which nodes should be used to schedule pods to
 k8sNodeFilters:
   - name: gpu
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-            - matchExpressions:
-                - key: "nebius.com/node-group-id"
-                  operator: In
-                  values:
-                    - "node-group-id-here"
-    tolerations:
-      - key: nvidia.com/gpu
-        operator: Exists
-        effect: NoSchedule
+      #    affinity:
+      #       nodeAffinity:
+      #         requiredDuringSchedulingIgnoredDuringExecution:
+      #           nodeSelectorTerms:
+      #             - matchExpressions:
+      #                 - key: "nebius.com/node-group-id"
+      #                   operator: In
+      #                   values:
+      #                     - "node-group-id-here"
+      #     tolerations:
+      #       - key: nvidia.com/gpu
+      #         operator: Exists
+      #         effect: NoSchedule
   - name: no-gpu
+      #    affinity:
+      #        nodeAffinity:
+      #          requiredDuringSchedulingIgnoredDuringExecution:
+      #            nodeSelectorTerms:
+      #              - matchExpressions:
+      #                  - key: "nebius.com/node-group-id"
+      #                    operator: In
+      #                    values:
+      #                      - "node-group-id-here"
+  - name: spread-worker
     affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-            - matchExpressions:
-                - key: "nebius.com/node-group-id"
-                  operator: In
-                  values:
-                    - "node-group-id-here"
+      podAffinity:
+        preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 100
+          podAffinityTerm:
+            labelSelector:
+              matchLabels:
+                app.kubernetes.io/component: worker
+            topologyKey: kubernetes.io/hostname
+  - name: spread-controller
+    affinity:
+      podAffinity:
+        preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 100
+          podAffinityTerm:
+            labelSelector:
+              matchLabels:
+                app.kubernetes.io/component: controller
+            topologyKey: kubernetes.io/hostname
+  - name: spread-login
+    affinity:
+      podAffinity:
+        preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 100
+          podAffinityTerm:
+            labelSelector:
+              matchLabels:
+                app.kubernetes.io/component: login
+            topologyKey: kubernetes.io/hostname
 # Sources for the volumes used in Slurm node specifications
 volumeSources:
   - name: controller-spool
@@ -67,7 +97,8 @@ secrets:
 # Job performing initial jail file system population
 populateJail:
   # Name of the k8s node filter
-  k8sNodeFilterName: "gpu"
+  k8sNodeFilterName: "no-gpu"
+  imagePullPolicy: "IfNotPresent"
   # Configuration of the volume containing the custom initial jail content (the default content is used if not set)
   jailSnapshotVolume: null
   #  jailSnapshotVolume:
@@ -83,7 +114,7 @@ periodicChecks:
   # NCCL test benchmark
   ncclBenchmark:
     # Whether to enable the benchmark
-    enabled: true
+    enabled: false
     # CronJob schedule. By default, runs every 3 hours
     schedule: "0 */3 * * *"
     # CronJob timeout in seconds. By default, equals to 30 min
@@ -114,7 +145,7 @@ periodicChecks:
     k8sNodeFilterName: "no-gpu"
 slurmNodes:
   accounting:
-    enabled: true
+    enabled: false
     k8sNodeFilterName: "no-gpu"
     slurmConfig: {}
     # accountingStorageTRES: gres/gpu,license/iop1
@@ -146,13 +177,13 @@ slurmNodes:
     slurmdbd:
       port: 6819
       resources:
-        cpu: "1000m"
-        memory: "3Gi"
+        cpu: "100m"
+        memory: "500Mi"
         ephemeralStorage: "10Gi"
     munge:
       resources:
-        cpu: "1000m"
-        memory: "1Gi"
+        cpu: "100m"
+        memory: "500Mi"
         ephemeralStorage: "5Gi"
     externalDB:
       enabled: false
@@ -163,10 +194,10 @@ slurmNodes:
       #   name: ""
       #   key: ""
     mariadbOperator:
-      enabled: false
+      enabled: true
       resources:
-        cpu: "1000m"
-        memory: "1Gi"
+        cpu: "100m"
+        memory: "500Mi"
         ephemeralStorage: "5Gi"
       replicas: 1
       replication: {}
@@ -175,13 +206,13 @@ slurmNodes:
       # probesEnabled: false
       # replica: {}
       # syncBinlog: false
-      storage: {}
-      # ephemeral: false
-      # resizeInUseVolumes: false
-      # size: {}
-      # storageClassName: ""
-      # volumeClaimTemplate: ""
-      # waitForVolumeResize: false
+      storage: 
+        ephemeral: false
+        resizeInUseVolumes: false
+        size: 30Gi
+        storageClassName: "standard"
+        # volumeClaimTemplate: ""
+        waitForVolumeResize: false
       podSecurityContext: {}
       # fsGroup: 2000
       # runAsUser: 1000
@@ -232,17 +263,17 @@ slurmNodes:
       #     memory: "64Mi"
   controller:
     size: 2
-    k8sNodeFilterName: "no-gpu"
+    k8sNodeFilterName: "spread-controller"
     slurmctld:
       port: 6817
       resources:
-        cpu: "1000m"
-        memory: "3Gi"
+        cpu: "100m"
+        memory: "500Mi"
         ephemeralStorage: "20Gi"
     munge:
       resources:
-        cpu: "1000m"
-        memory: "1Gi"
+        cpu: "100m"
+        memory: "500Mi"
         ephemeralStorage: "5Gi"
     volumes:
       spool:
@@ -250,29 +281,29 @@ slurmNodes:
       jail:
         volumeSourceName: "jail"
   worker:
-    size: 2
-    k8sNodeFilterName: "gpu"
+    size: 3
+    k8sNodeFilterName: "spread-worker"
     cgroupVersion: v2
     slurmd:
       port: 6818
       resources:
-        cpu: "156000m"
-        memory: "1220Gi"
+        cpu: "100m"
+        memory: "2Gi"
         ephemeralStorage: "55Gi"
-        gpu: 8
+        gpu: 0
     munge:
       resources:
-        cpu: "2000m"
-        memory: "4Gi"
+        cpu: "100m"
+        memory: "500Mi"
         ephemeralStorage: "5Gi"
     volumes:
       spool:
         volumeClaimTemplateSpec:
-          storageClassName: "nebius-network-ssd"
+          storageClassName: "standard"
           accessModes: ["ReadWriteOnce"]
           resources:
             requests:
-              storage: "128Gi"
+              storage: "8Gi"
       jail:
         volumeSourceName: "jail"
       jailSubMounts: []
@@ -282,12 +313,12 @@ slurmNodes:
       #          volumeSourceName: "mlperf-sd"
   login:
     size: 2
-    k8sNodeFilterName: "no-gpu"
+    k8sNodeFilterName: "spread-login"
     sshd:
       port: 22
       resources:
-        cpu: "3000m"
-        memory: "9Gi"
+        cpu: "100m"
+        memory: "500Mi"
         ephemeralStorage: "30Gi"
     # Authorized keys required for SSH connection to Slurm login nodes
     sshRootPublicKeys:
@@ -304,7 +335,7 @@ slurmNodes:
     sshdServiceAnnotations: {}
     munge:
       resources:
-        cpu: "500m"
+        cpu: "100m"
         memory: "500Mi"
         ephemeralStorage: "5Gi"
     volumes:
@@ -321,13 +352,13 @@ slurmNodes:
     k8sNodeFilterName: "no-gpu"
     exporter:
       resources:
-        cpu: "250m"
+        cpu: "100m"
         memory: "256Mi"
         ephemeralStorage: "500Mi"
     munge:
       resources:
-        cpu: "1000m"
-        memory: "1Gi"
+        cpu: "100m"
+        memory: "500Mi"
         ephemeralStorage: "5Gi"
     volumes:
       jail:
